Added job and other models and mapped with company